# docs/frontleaves_plugin_swagger.json
@@ -85,7 +85,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/xBase.BaseResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/xBase.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/apiAchievement.AchievementListResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -404,7 +416,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/xBase.BaseResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/xBase.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/apiAnnouncement.AnnouncementListResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -770,7 +794,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/xBase.BaseResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/xBase.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/apiAnnouncementSchedule.ScheduleListResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -1848,7 +1884,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/xBase.BaseResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/xBase.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/apiTitle.TitleListResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -2212,7 +2260,19 @@
                     "200": {
                         "description": "成功",
                         "schema": {
-                            "$ref": "#/definitions/xBase.BaseResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/xBase.BaseResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/apiAnnouncement.AnnouncementListResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -2841,6 +2901,26 @@
                 }
             }
         },
+        "apiAchievement.AchievementListResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiAchievement.AchievementResponse"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "apiAchievement.AchievementResponse": {
             "type": "object",
             "properties": {
@@ -3028,6 +3108,52 @@
                 }
             }
         },
+        "apiAnnouncement.AnnouncementListItemResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "published_at": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
+        "apiAnnouncement.AnnouncementListResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiAnnouncement.AnnouncementListItemResponse"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "apiAnnouncement.AnnouncementResponse": {
             "type": "object",
             "properties": {
@@ -3160,6 +3286,26 @@
                     "type": "integer"
                 },
                 "sort_order": {
+                    "type": "integer"
+                }
+            }
+        },
+        "apiAnnouncementSchedule.ScheduleListResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiAnnouncementSchedule.ScheduleResponse"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
                     "type": "integer"
                 }
             }
@@ -3597,6 +3743,26 @@
                     "type": "integer"
                 },
                 "type": {
+                    "type": "integer"
+                }
+            }
+        },
+        "apiTitle.TitleListResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiTitle.TitleResponse"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "total": {
                     "type": "integer"
                 }
             }
